org managers can set a space's isolation segment
[#139653299]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -80,6 +80,10 @@
     "translation": "Apps:"
   },
   {
+    "id": "Assign the isolation segment that apps in a space are started in",
+    "translation": ""
+  },
+  {
     "id": "BUILDPACK_NAME",
     "translation": "BUILDPACK_NAME"
   },
@@ -838,6 +842,10 @@
   {
     "id": "CF_NAME set-running-environment-variable-group '{\\\"name\\\":\\\"value\\\",\\\"name\\\":\\\"value\\\"}'",
     "translation": "CF_NAME set-running-environment-variable-group '{\\\"name\\\":\\\"value\\\",\\\"name\\\":\\\"value\\\"}'"
+  },
+  {
+    "id": "CF_NAME set-space-isolation-segment SPACE SEGMENT_NAME",
+    "translation": ""
   },
   {
     "id": "CF_NAME set-space-quota SPACE-NAME SPACE-QUOTA-NAME",
@@ -1648,6 +1656,10 @@
     "translation": ""
   },
   {
+    "id": "Setting isolation segment {{.SegmentName}} for space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Since",
     "translation": ""
   },
@@ -2205,6 +2217,10 @@
   },
   {
     "id": "services:",
+    "translation": ""
+  },
+  {
+    "id": "set-space-isolation-segment",
     "translation": ""
   },
   {
