space command shows assigned isolation segment
[finishes #136714221]

Signed-off-by: Renee Chu <rchu@pivotal.io>
Signed-off-by: Alex Melnik <aleksandr.melnik@suse.com>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -2140,6 +2140,10 @@
     "translation": ""
   },
   {
+    "id": "isolation segment:",
+    "translation": ""
+  },
+  {
     "id": "isolation segments:",
     "translation": ""
   },
