--- a/cf/i18n/resources/zh-hant.untranslated.json
+++ b/cf/i18n/resources/zh-hant.untranslated.json
@@ -2136,6 +2136,10 @@
     "translation": ""
   },
   {
+    "id": "isolation segment:",
+    "translation": ""
+  },
+  {
     "id": "isolation segments:",
     "translation": ""
   },
