--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -4800,6 +4800,10 @@
     "translation": "Gruppi di variabili di ambiente in esecuzione:"
   },
   {
+    "id": "Running applications in the space need a restart to be moved over to this isolation segment.",
+    "translation": ""
+  },
+  {
     "id": "SECURITY GROUP",
     "translation": "GRUPPO DI SICUREZZA"
   },
@@ -5030,10 +5034,6 @@
   {
     "id": "Setting env variable '{{.VarName}}' to '{{.VarValue}}' for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
     "translation": "Impostazione della variabile di ambiente '{{.VarName}}' su '{{.VarValue}}' per l'applicazione {{.AppName}} nell'organizzazione {{.OrgName}} / spazio {{.SpaceName}} come {{.CurrentUser}} in corso..."
-  },
-  {
-    "id": "Setting isolation segment {{.SegmentName}} for space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}...",
-    "translation": ""
   },
   {
     "id": "Setting quota {{.QuotaName}} to org {{.OrgName}} as {{.Username}}...",
@@ -5965,6 +5965,10 @@
   },
   {
     "id": "Updating health check type for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
+    "translation": ""
+  },
+  {
+    "id": "Updating isolation segment of space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}...",
     "translation": ""
   },
   {
