--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -1588,6 +1588,10 @@
     "translation": ""
   },
   {
+    "id": "Running applications in the space need a restart to be moved over to this isolation segment.",
+    "translation": ""
+  },
+  {
     "id": "SERVICE_INSTANCES",
     "translation": "SERVICE_INSTANCES"
   },
@@ -1633,10 +1637,6 @@
   },
   {
     "id": "Set to 'port' or 'none'",
-    "translation": ""
-  },
-  {
-    "id": "Setting isolation segment {{.SegmentName}} for space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}...",
     "translation": ""
   },
   {
@@ -2022,6 +2022,10 @@
   {
     "id": "Updating health check type for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
     "translation": "Updating health check type for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}..."
+  },
+  {
+    "id": "Updating isolation segment of space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}...",
+    "translation": "Updating isolation segment of space {{.SpaceName}} in org {{.OrgName}} as {{.CurrentUser}}..."
   },
   {
     "id": "Usage:",
