--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -5332,6 +5332,10 @@
     "translation": "Task has been submitted successfully for execution.\nTask name:   {{.TaskName}}\nTask id:     {{.TaskSequenceID}}"
   },
   {
+    "id": "Task must have a droplet. Specify droplet or assign current droplet to app.",
+    "translation": "Task must have a droplet. Specify droplet or assign current droplet to app."
+  },
+  {
     "id": "Task workers are unavailable.",
     "translation": ""
   },
@@ -5542,10 +5546,6 @@
   {
     "id": "The quota",
     "translation": "The quota"
-  },
-  {
-    "id": "The request is semantically invalid: Task must have a droplet. Specify droplet or assign current droplet to app.",
-    "translation": ""
   },
   {
     "id": "The route {{.RouteName}} did not match any existing domains.",
