v3 isolation segments commands check minimum api version
[#138480837]

Signed-off-by: Alex Melnik <aleksandr.melnik@suse.com>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -1340,7 +1340,7 @@
     "translation": ""
   },
   {
-    "id": "CF_NAME set-space-isolation-segment SPACE SEGMENT_NAME",
+    "id": "CF_NAME set-space-isolation-segment SPACE_NAME SEGMENT_NAME",
     "translation": ""
   },
   {
