--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -1340,7 +1340,7 @@
     "translation": ""
   },
   {
-    "id": "CF_NAME set-space-isolation-segment SPACE SEGMENT_NAME",
+    "id": "CF_NAME set-space-isolation-segment SPACE_NAME SEGMENT_NAME",
     "translation": ""
   },
   {
