--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -3224,6 +3224,10 @@
     "translation": "In Windows PowerShell JSON mit Escapezeichen und in doppelten Anführungszeichen verwenden: \"{\\\"valid\\\":\\\"json\\\"}\""
   },
   {
+    "id": "In order to move running applications to this isolation segment, they must be restarted.",
+    "translation": ""
+  },
+  {
     "id": "Include response headers in the output",
     "translation": "Antwortheader in Ausgabe einbeziehen"
   },
@@ -4798,10 +4802,6 @@
   {
     "id": "Running Environment Variable Groups:",
     "translation": "Umgebungsvariablengruppen ausführen:"
-  },
-  {
-    "id": "Running applications in the space need a restart to be moved over to this isolation segment.",
-    "translation": ""
   },
   {
     "id": "SECURITY GROUP",
