--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -3224,6 +3224,10 @@
     "translation": "In Windows PowerShell, utilizza JSON con virgolette doppie e con escape: \"{\\\"valid\\\":\\\"json\\\"}\""
   },
   {
+    "id": "In order to move running applications to this isolation segment, they must be restarted.",
+    "translation": ""
+  },
+  {
     "id": "Include response headers in the output",
     "translation": "Includi intestazioni di risposta nell'output"
   },
@@ -4798,10 +4802,6 @@
   {
     "id": "Running Environment Variable Groups:",
     "translation": "Gruppi di variabili di ambiente in esecuzione:"
-  },
-  {
-    "id": "Running applications in the space need a restart to be moved over to this isolation segment.",
-    "translation": ""
   },
   {
     "id": "SECURITY GROUP",
