--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -3224,6 +3224,10 @@
     "translation": "No Windows PowerShell, use JSON escapado com aspas duplas: \"{\\\"valid\\\":\\\"json\\\"}\""
   },
   {
+    "id": "In order to move running applications to this isolation segment, they must be restarted.",
+    "translation": ""
+  },
+  {
     "id": "Include response headers in the output",
     "translation": "Incluir cabeçalhos de resposta na saída"
   },
@@ -4798,10 +4802,6 @@
   {
     "id": "Running Environment Variable Groups:",
     "translation": "Grupos de variáveis de ambiente em execução:"
-  },
-  {
-    "id": "Running applications in the space need a restart to be moved over to this isolation segment.",
-    "translation": ""
   },
   {
     "id": "SECURITY GROUP",
