--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -3224,6 +3224,10 @@
     "translation": "在 Windows PowerShell 中，使用双引号括起来的转义 JSON: \"{\\\"valid\\\":\\\"json\\\"}\""
   },
   {
+    "id": "In order to move running applications to this isolation segment, they must be restarted.",
+    "translation": ""
+  },
+  {
     "id": "Include response headers in the output",
     "translation": "在输出中包含响应头"
   },
@@ -4798,10 +4802,6 @@
   {
     "id": "Running Environment Variable Groups:",
     "translation": "运行环境变量组: "
-  },
-  {
-    "id": "Running applications in the space need a restart to be moved over to this isolation segment.",
-    "translation": ""
   },
   {
     "id": "SECURITY GROUP",
